--- a/custom.css
+++ b/custom.css
@@ -11,7 +11,7 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6,p,body,a,span,strong,li{font-family:Ro
 p,body,a,span,strong,li{font-size:16px}
 p,ul,ol,pre,table{margin-bottom:10px;text-align:  justify;}
 img{max-width:100%}
-.section1{background:url(https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhV0a2zt1g4fT3kMeIL2ginEbaKJzLAaFA7XbCkQVw2Pp8UTYN1cOUI-s2itilYXn9azYo4F6ksgYGCQJWwkayWV5EmWzEr8uVxaqoSJ_nuXmprk2Mp6JyNbpnbW0vHiq57-3gG8O8oQL7EnjUj6SHZbqpnPfXmUdPDlC43H8U9Wd5h81Q6CE6jnlx3/s1600/0kSufFFa.jpgXmprk2Mp6JyNbpnbW0vHiq57-3gG8O8oQL7EnjUj6SHZbqpnPfXmUdPDlC43H8U9Wd5h81Q6CE6jnlx3/s1600/0kSufFFa.jpg);background-size:cover;background-position:center;height:-moz-calc(100% - (1px));height:-webkit-calc(100% - (1px));height:calc(100% - (1px))}
+.section1{background:url(https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhV0a2zt1g4fT3kMeIL2ginEbaKJzLAaFA7XbCkQVw2Pp8UTYN1cOUI-s2itilYXn9azYo4F6ksgYGCQJWwkayWV5EmWzEr8uVxaqoSJ_nuXmprk2Mp6JyNbpnbW0vHiq57-3gG8O8oQL7EnjUj6SHZbqpnPfXmUdPDlC43H8U9Wd5h81Q6CE6jnlx3/s1600/0kSufFFa.jpg);background-size:cover;background-position:center;height:-moz-calc(100% - (1px));height:-webkit-calc(100% - (1px));height:calc(100% - (1px))}
 .section3{background:url(upload/bg1.jpg);background-size:cover;background-position:top;padding:100px 0 60px}
 .section4{background:url(upload/bg2.gif);background-size:cover;background-position:top;padding:120px 0}
 #header #header-wrap,#header.header-sticky #header-wrap{background-color:rgba(172,148,85,0.5)!important;border-bottom:none}
