--- a/custom.css
+++ b/custom.css
@@ -11,7 +11,7 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6,p,body,a,span,strong,li{font-family:Ro
 p,body,a,span,strong,li{font-size:16px}
 p,ul,ol,pre,table{margin-bottom:10px;text-align:  justify;}
 img{max-width:100%}
-.section1{background:url(https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiO0qPTn898EBB00-zByartahDKmQbM0vqj7gIhMlXyhzhoOtlyJSog-F-dIe36EhyodziSyub5i3ECAlthFpTdBpSC-x6_xer1TVIofrHU_HZMXFrXevWouAxFhw0Y-IICaSr-1hJNEKV8QI1hIj2Nvpd1G4WIRxIv0lwALkrftf4lIpk24Np2LPXO/s1600/sapa%281%29.jpg);background-size:cover;background-position:center;height:-moz-calc(100% - (1px));height:-webkit-calc(100% - (1px));height:calc(100% - (1px))}
+.section1{background:url(https://lh3.googleusercontent.com/pw/AMWts8A96is1xPK5hiU3onm6vtkWHlU7g853OgKw_WdHJSFK0CKZNiwhDCu2Fa99kHG4EE_eSh1k3rxBA-hRTQbq1iv9O6UA9hm5cbr5wVjdF81SV_Exni89IDYaJPL3QNaOTEfYZU8HMWDnWkWkb8svD4Aw);background-size:cover;background-position:center;height:-moz-calc(100% - (1px));height:-webkit-calc(100% - (1px));height:calc(100% - (1px))}
 .section3{background:url(upload/bg1.jpg);background-size:cover;background-position:top;padding:100px 0 60px}
 .section4{background:url(upload/bg2.gif);background-size:cover;background-position:top;padding:120px 0}
 #header #header-wrap,#header.header-sticky #header-wrap{background-color:rgba(172,148,85,0.5)!important;border-bottom:none}
